--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "webpack": "webpack $WEBPACK_ARGS",
     "compile": "babel -d lib/ src/",
     "prepublish": "npm run compile",
+    "prebuild": "npm run compile",
     "build": "NODE_ENV=development npm run webpack",
     "release": "NODE_ENV=production npm run webpack",
     "pretest": "npm run compile",
@@ -33,7 +34,10 @@
     "url": "https://github.com/binocarlos/passport-service-gui/issues"
   },
   "homepage": "https://github.com/binocarlos/passport-service-gui",
-  "dependencies": {},
+  "dependencies": {
+    "biro": "^3.0.1",
+    "biro-material-ui": "^2.0.1"
+  },
   "devDependencies": {
     "babel-cli": "^6.10.1",
     "babel-core": "^6.4.5",
@@ -41,23 +45,18 @@
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-1": "^6.3.13",
-    "biro": "^2.4.1",
-    "biro-material-ui": "^1.0.2",
     "expect": "^1.14.0",
     "jquery": "^3.0.0",
     "jsdom": "^8.1.0",
     "material-ui": "^0.15.1",
     "mocha": "^2.4.5",
-    "promise": "^7.1.1",
     "react": "^15.1.0",
     "react-addons-test-utils": "^0.14.7",
     "react-dom": "^15.1.0",
     "react-redux": "^4.4.0",
     "react-shallow-testutils": "^1.0.0",
     "redux": "^3.1.6",
-    "redux-await": "^5.0.1",
     "redux-thunk": "^2.1.0",
-    "superagent": "^2.0.0",
     "valid-email": "0.0.2",
     "webpack": "^1.12.12"
   }
