--- a/package.json
+++ b/package.json
@@ -45,7 +45,9 @@
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-1": "^6.3.13",
+    "es6-promise": "^3.2.1",
     "expect": "^1.14.0",
+    "isomorphic-fetch": "^2.2.1",
     "jquery": "^3.0.0",
     "jsdom": "^8.1.0",
     "material-ui": "^0.15.1",
