--- a/package.json
+++ b/package.json
@@ -35,8 +35,10 @@
   },
   "homepage": "https://github.com/binocarlos/passport-service-gui",
   "dependencies": {
+    "valid-email": "0.0.2",
     "biro": "^3.0.1",
-    "biro-material-ui": "^2.0.1"
+    "biro-material-ui": "^2.0.1",
+    "isomorphic-fetch": "^2.2.1"
   },
   "devDependencies": {
     "babel-cli": "^6.10.1",
@@ -47,7 +49,6 @@
     "babel-preset-stage-1": "^6.3.13",
     "es6-promise": "^3.2.1",
     "expect": "^1.14.0",
-    "isomorphic-fetch": "^2.2.1",
     "jquery": "^3.0.0",
     "jsdom": "^8.1.0",
     "material-ui": "^0.15.1",
@@ -59,7 +60,7 @@
     "react-shallow-testutils": "^1.0.0",
     "redux": "^3.1.6",
     "redux-thunk": "^2.1.0",
-    "valid-email": "0.0.2",
+    "redux-mock-store": "^1.1.2",
     "webpack": "^1.12.12"
   }
 }
