get kettle-ui to handle the forms

--- a/package.json
+++ b/package.json
@@ -36,9 +36,12 @@
   "homepage": "https://github.com/binocarlos/passport-service-gui",
   "dependencies": {
     "valid-email": "0.0.2",
-    "biro": "^3.0.1",
-    "biro-material-ui": "^2.0.1",
-    "isomorphic-fetch": "^2.2.1"
+    "biro": "^3.1.0",
+    "biro-material-ui": "^2.1.0",
+    "isomorphic-fetch": "^2.2.1",
+    "kettle-ui": "^1.0.0",
+    "material-ui": "^0.15.1",
+    "react": "^15.2.1"
   },
   "devDependencies": {
     "babel-cli": "^6.10.1",
@@ -51,15 +54,14 @@
     "expect": "^1.14.0",
     "jquery": "^3.0.0",
     "jsdom": "^8.1.0",
-    "material-ui": "^0.15.1",
     "mocha": "^2.4.5",
-    "react": "^15.1.0",
-    "react-addons-test-utils": "^0.14.7",
+    "nock": "^8.0.0",
+    "react-addons-test-utils": "^15.2.1",
     "react-dom": "^15.1.0",
-    "react-redux": "^4.4.0",
-    "react-shallow-testutils": "^1.0.0",
+    "react-redux": "^4.4.5",
+    "react-shallow-testutils": "^2.0.0",
     "react-tap-event-plugin": "^1.0.0",
-    "redux": "^3.1.6",
+    "redux": "^3.5.2",
     "redux-mock-store": "^1.1.2",
     "redux-thunk": "^2.1.0",
     "webpack": "^1.12.12"
