--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "clean": "mkdir -p example/dist && rm -rf example/dist/*",
-    "indexpage": "cp example/index.html example/dist/index.html",
+    "indexpage": "cp example/*.{html,css} example/dist",
     "assets": "npm run indexpage",
     "watch": "WEBPACK_ARGS=--watch npm run webpack",
     "prewebpack": "npm run compile && npm run clean && npm run assets",
@@ -39,7 +39,7 @@
     "biro": "^3.1.0",
     "biro-material-ui": "^2.1.0",
     "isomorphic-fetch": "^2.2.1",
-    "kettle-ui": "^1.0.0",
+    "kettle-ui": "^2.0.0",
     "material-ui": "^0.15.1",
     "react": "^15.2.1"
   },
