--- a/package.json
+++ b/package.json
@@ -35,13 +35,13 @@
   },
   "homepage": "https://github.com/binocarlos/passport-service-gui",
   "dependencies": {
-    "valid-email": "0.0.2",
     "biro": "^3.1.0",
     "biro-material-ui": "^2.1.0",
-    "isomorphic-fetch": "^2.2.1",
     "kettle-ui": "^2.0.0",
     "material-ui": "^0.15.1",
-    "react": "^15.2.1"
+    "react": "^15.2.1",
+    "superagent": "^2.1.0",
+    "valid-email": "0.0.2"
   },
   "devDependencies": {
     "babel-cli": "^6.10.1",
@@ -50,7 +50,6 @@
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-1": "^6.3.13",
-    "es6-promise": "^3.2.1",
     "expect": "^1.14.0",
     "jquery": "^3.0.0",
     "jsdom": "^8.1.0",
