--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "react-addons-test-utils": "^15.2.1",
     "react-dom": "^15.1.0",
     "react-redux": "^4.4.5",
+    "react-router": "^2.6.0",
     "react-shallow-testutils": "^2.0.0",
     "react-tap-event-plugin": "^1.0.0",
     "redux": "^3.5.2",
