--- a/package.json
+++ b/package.json
@@ -40,8 +40,7 @@
     "kettle-ui": "^3.0.0",
     "material-ui": "^0.15.4",
     "react": "^15.3.1",
-    "superagent": "^2.1.0",
-    "valid-email": "0.0.2"
+    "superagent": "^2.1.0"
   },
   "devDependencies": {
     "babel-cli": "^6.10.1",
